# solive-client-qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint
cmake/: FindFFMPEG.cmake  vcpkg_toolchain.cmake
config/: config.json
include/include/: AudioPlayer.h  ConfigStrategy.h  HomePage.h  ISocketClientObserver.h  ISocketStrategy.h  JsonConfigStrategy.h  LiveClient.h  LiveViewerPage.h  LiveViewerPageDef.h  Logger.h  MainWindow.h  SocketClient.h  SocketClientDef.h  SocketClientImpl.h  VideoRenderer.h  WebRTCFactory.h
include/include/Config/: ConfigDef.h  ConfigFactory.h  ConfigManager.h  ConfigStrategy.h  JsonConfigStrategy.h  JsonConfigStrategyImpl.h
include/include/Ctrl/: AudioPlayer.h  VideoRenderer.h
include/include/Dlg/: RecordSettingDialog.h
include/include/Logger/: Logger.h
include/include/Page/: HomePage.h  LiveViewerPage.h  LiveViewerPageDef.h  MainWindow.h  PageDef.h
include/include/PeerConn/: PeerConnectionFactory.h
include/include/Socket/: BeastAdapter.h  ConnectionState.h  HttpSocketStrategy.h  HttpsSocketStrategy.h  ISocket.h  ISocketClientObserver.h  ISocketStrategy.h  SioAdapter.h  SocketClient.h  SocketClientDef.h  SocketClientImpl.h
include/include/Util/: AudioRecorder.h  MediaManager.h  MediaUtil.h  MessageManager.h  ThreadPool.h  ThreadSafeQueue.h  ThreadSafeQueueImpl.h  UtilDef.h  VideoRecorder.h
resources/: resource.qrc
resources/styles/: solive.qss
src/: AudioPlayer.cpp  CMakeLists.txt  ConfigFactory.cpp  HomePage.cpp  HttpSocketStrategy.cpp  HttpsSocketStrategy.cpp  JsonConfigStrategy.cpp  LiveClient.cpp  LiveViewerPage.cpp  Logger.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SocketClient.cpp  VideoRenderer.cpp  WebRTCFactory.cpp  main.cpp  stdafx.cpp  stdafx.h
src/Config/: ConfigFactory.cpp  ConfigManager.cpp  JsonConfigStrategy.cpp
src/Ctrl/: AudioPlayer.cpp  VideoRenderer.cpp
src/Dlg/: RecordSettingDialog.cpp
src/Logger/: Logger.cpp
src/Page/: HomePage.cpp  LiveViewerPage.cpp  MainWindow.cpp
src/PeerConn/: PeerConnectionFactory.cpp
src/Socket/: BeastAdapter.cpp  HttpSocketStrategy.cpp  HttpsSocketStrategy.cpp  SioAdapter.cpp  SocketClient.cpp
src/Util/: AudioRecorder.cpp  MediaManager.cpp  MediaUtil.cpp  MessageManager.cpp  ThreadPool.cpp  VideoRecorder.cpp
ui/: HomePage.ui  LiveViewerPage.ui  MainWindow.ui  RecordSettingDialog.ui  VideoControlBar.ui
